<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.quiz.fragments.WalletFragment">


    <View
        android:id="@+id/view7"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_100mdp"
        android:background="@drawable/background_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="@dimen/_180mdp"
        android:layout_marginStart="@dimen/_20mdp"
        android:layout_marginLeft="@dimen/_20mdp"
        android:layout_marginTop="@dimen/_25mdp"
        android:layout_marginEnd="@dimen/_20mdp"
        android:layout_marginRight="@dimen/_20mdp"
        android:background="@drawable/rounded_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35mdp"
        android:fontFamily="@font/muli_light"
        android:text="@string/current_coins"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_16font_mdp"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6" />

    <TextView
        android:id="@+id/currentCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_bold"
        android:text="60,000"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_35font_mdp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15mdp"
        android:fontFamily="@font/muli_light"
        android:text="@string/withdraw_coin"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_14font_mdp"
        app:layout_constraintEnd_toEndOf="@+id/currentCoins"
        app:layout_constraintStart_toStartOf="@+id/currentCoins"
        app:layout_constraintTop_toBottomOf="@+id/currentCoins" />

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25mdp"
        android:background="@drawable/textbox"
        android:drawableLeft="@drawable/ic_paypal"
        android:drawablePadding="@dimen/_10mdp"
        android:ems="10"
        android:hint="@string/paypal_email_address"
        android:inputType="text"
        android:padding="@dimen/_12mdp"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toBottomOf="@+id/view6" />
    <EditText
        android:id="@+id/esewaPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25mdp"
        android:background="@drawable/textbox"
        android:drawableLeft="@drawable/esewa"
        android:drawablePadding="@dimen/_10mdp"
        android:ems="10"
        android:hint="Esewa-Id"
        android:inputType="phone"
        android:padding="@dimen/_12mdp"
        app:layout_constraintEnd_toEndOf="@+id/emailBox"
        app:layout_constraintStart_toStartOf="@+id/emailBox"
        app:layout_constraintTop_toBottomOf="@+id/emailBox" />

    <Button
        android:id="@+id/sendRequest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16mdp"
        android:background="@drawable/btn_back"
        app:backgroundTint="@null"
        android:fontFamily="@font/muli_bold"
        android:text="@string/send_request"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/esewaPhone"
        app:layout_constraintStart_toStartOf="@+id/esewaPhone"
        app:layout_constraintTop_toBottomOf="@+id/esewaPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>